Complete first section

--- a/index.html
+++ b/index.html
@@ -99,8 +99,14 @@
         </div>
     </header>
     <main>
-        <section class="a"></section>
-        <section class="b"></section>
+        <section class="section__one">
+            <div class="section__content">
+                <h3 class="headings">Recent launch</h3>
+                <h1 class="headings">Transporter-5 Mission</h1>
+                <a class="link button" href="">Rewatch</a>
+            </div>
+        </section>
+        <section class="section__two"></section>
     </main>
 </body>
 </html>
