Complete all sections

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </div>
     </header>
     <main>
-        <section class="section__one">
+        <section class="section__background section--one">
             <div class="section__content">
                 <h3 class="headings">Recent launch</h3>
                 <h1 class="headings">Transporter-5 Mission</h1>
@@ -109,7 +109,46 @@
                 </a>
             </div>
         </section>
-        <section class="section__two"></section>
+        <section class="section__background section--two">
+            <div class="section__content">
+                <h3 class="headings">Completed mission</h3>
+                <h1 class="headings">Crew-3 returns to Earth</h1>
+                <a class="link button" href="">
+                    Rewatch
+                    <span class="button__filler"></span>
+                </a>
+            </div>
+        </section>
+        <section class="section__background section--two">
+            <div class="section__content">
+                <h3 class="headings">Recent launch</h3>
+                <h1 class="headings">Starlink Mission</h1>
+                <a class="link button" href="">
+                    Rewatch
+                    <span class="button__filler"></span>
+                </a>
+            </div>
+        </section>
+        <section class="section__background section--two">
+            <div class="section__content">
+                <h3 class="headings"></h3>
+                <h1 class="headings">Starship Update</h1>
+                <a class="link button" href="">
+                    Learn more
+                    <span class="button__filler"></span>
+                </a>
+            </div>
+        </section>
+        <section class="section__background section--two">
+            <div class="section__content">
+                <h3 class="headings"></h3>
+                <h1 class="headings">Starship to land NASA astronauts on the Moon</h1>
+                <a class="link button" href="">
+                    Learn more
+                    <span class="button__filler"></span>
+                </a>
+            </div>
+        </section>
     </main>
 </body>
 </html>
