--- a/index.html
+++ b/index.html
@@ -150,5 +150,31 @@
             </div>
         </section>
     </main>
+    <footer class="footer">
+        <ul class="footer__menu">
+            <li class="list__no-link">SpaceX © 2022</li>
+            <li>
+                <a class="link footer__link" href="">Twitter</a>
+            </li>
+            <li>
+                <a class="link footer__link" href="">YouTube</a>
+            </li>
+            <li>
+                <a class="link footer__link" href="">Instagram</a>
+            </li>
+            <li>
+                <a class="link footer__link" href="">Flickr</a>
+            </li>
+            <li>
+                <a class="link footer__link" href="">Linkedin</a>
+            </li>
+            <li>
+                <a class="link footer__link" href="">Privacy Policy</a>
+            </li>
+            <li>
+                <a class="link footer__link" href="">Suppliers</a>
+            </li>
+        </ul>
+    </footer>
 </body>
 </html>
